# latex_flatten

./: .gitignore  README.md  pyproject.toml
latex_flatten/: latex_flatten.py
test/: inner.tex  output.tex  test.tex
