[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latex_flatten"
version = "0.1.0"
description = "A Python library for flattening LaTeX documents. Forked from https://github.com/rekka/latex-flatten"
authors = [{ name = "Pedro Pons-Villalonga", email = "ponsvpedro@gmail.com" }]
license = "UNLICENSE"
requires-python = ">=3.8"

[project.scripts]
latex_flatten = "latex_flatten.latex_flatten:flatten_latex"

[tool.setuptools]
package-dir = { "latex_flatten" = "latex_flatten" }
